--- a/.github/workflows/gotm.yml
+++ b/.github/workflows/gotm.yml
@@ -4,12 +4,15 @@ jobs:
    gfortran:
       strategy:
          matrix:
-            version: [6, 7, 8, 9, 10]
+            version: [7, 8, 9, 10]
+            os: [ubuntu-latest]
             include:
+               - version: 6
+                 os: ubuntu-18.04
                - version: 8
                  cmake_args: -DFABM_USE_CONTIGUOUS=OFF
          fail-fast: false
-      runs-on: ubuntu-latest
+      runs-on: ${{ matrix.os }}
       steps:
       - name: Install compiler
         run: sudo apt-get install gfortran-${{ matrix.version }}
