--- a/.github/workflows/gotm.yml
+++ b/.github/workflows/gotm.yml
@@ -12,7 +12,9 @@ jobs:
       runs-on: ubuntu-latest
       steps:
       - name: Install compiler
-        run: sudo apt-get install gfortran-${{ matrix.version }}
+        run: |
+           sudo apt-get update
+           sudo apt-get install gfortran-${{ matrix.version }}
       - name: Clone gotm
         uses: actions/checkout@v2
         with:
