rho0 in density.F90 instead of meanflow.F90
use density instead of eq_state

--- a/src/util/CMakeLists.txt
+++ b/src/util/CMakeLists.txt
@@ -13,8 +13,7 @@ add_library(util
    convert_fluxes.F90
    diff_center.F90
    diff_face.F90
-#   eqstate.F90
-   equation_of_state.F90
+   density.F90
    gridinterpol.F90
    lagrange.F90
    ode_solvers.F90
