--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -25,7 +25,12 @@ add_executable(test_time EXCLUDE_FROM_ALL
               )
 target_link_libraries(test_time PRIVATE util)
 
-add_custom_target(gotm_tests)
-add_dependencies(gotm_tests test_airsea test_albedo test_eqstate test_time)
+add_executable(test_tridiagonal EXCLUDE_FROM_ALL
+               test_tridiagonal.F90
+              )
+target_link_libraries(test_tridiagonal PRIVATE util)
 
-set_property(TARGET gotm_tests test_airsea test_albedo test_bulk test_eqstate test_time PROPERTY FOLDER tests)
+add_custom_target(gotm_tests)
+add_dependencies(gotm_tests test_airsea test_albedo test_eqstate test_time test_tridiagonal)
+
+set_property(TARGET gotm_tests test_airsea test_albedo test_bulk test_eqstate test_time test_tridiagonal PROPERTY FOLDER tests)
