fixed build - GA

--- a/src/meanflow/CMakeLists.txt
+++ b/src/meanflow/CMakeLists.txt
@@ -15,5 +15,6 @@ add_library(meanflow
    vequation.F90
    wequation.F90
 )
-target_link_libraries(meanflow PRIVATE gsw_static observations airsea_driver config)
+target_link_libraries(meanflow PRIVATE gsw_static stokes_drift observations airsea_driver config)
+#KBtarget_link_libraries(meanflow PRIVATE stokes_drift observations airsea_driver config)
 set_property(TARGET meanflow PROPERTY FOLDER gotm)
