--- a/.gitmodules
+++ b/.gitmodules
@@ -1,14 +1,17 @@
 [submodule "extern/fabm"]
 	path = extern/fabm
-	url = https://github.com/fabm-model/fabm
-#	url = ../../fabm-model/fabm
+#	url = https://github.com/fabm-model/fabm
+	url = ../../fabm-model/fabm
 [submodule "extern/flexout"]
 	path = extern/flexout
-	url = https://github.com/BoldingBruggeman/flexout
-#	url = ../../BoldingBruggeman/flexout
+#	url = https://github.com/BoldingBruggeman/flexout
+	url = ../../BoldingBruggeman/flexout
 [submodule "extern/stim"]
 	path = extern/stim
 	url = https://github.com/BoldingBruggeman/stim
+[submodule "extern/gsw-fortran"]
+	path = extern/gsw
+	url = https://github.com/TEOS-10/GSW-Fortran.git
 [submodule "extern/CVMix-src"]
 	path = extern/CVMix-src
 	url = https://github.com/CVMix/CVMix-src.git
