--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -26,6 +26,6 @@ add_executable(test_time EXCLUDE_FROM_ALL
 target_link_libraries(test_time PRIVATE util)
 
 add_custom_target(gotm_tests)
-add_dependencies(gotm_tests test_airsea test_albedo test_eqstate test_time)
+add_dependencies(gotm_tests test_airsea test_albedo test_time)
 
 set_property(TARGET gotm_tests test_airsea test_albedo test_bulk test_eqstate test_time PROPERTY FOLDER tests)
