skip root path when locating FABM and STIM (needed when cross-compiling as with conda build)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,7 +81,7 @@ if(GOTM_USE_FABM)
       find_package(fabm REQUIRED CONFIG HINTS "${FABM_PREFIX}" NO_DEFAULT_PATH)
       mark_as_advanced(CLEAR FABM_PREFIX)
    else()
-      find_path(FABM_BASE src/fabm.F90 HINTS ${CMAKE_CURRENT_LIST_DIR}/extern/fabm DOC "Path to FABM source directory.")
+      find_path(FABM_BASE src/fabm.F90 HINTS ${CMAKE_CURRENT_LIST_DIR}/extern/fabm DOC "Path to FABM source directory." NO_CMAKE_FIND_ROOT_PATH)
       set(FABM_EMBED_VERSION ${GOTM_EMBED_VERSION} CACHE BOOL "Embed FABM version information" FORCE)
       set(FABM_FORCED_HOST gotm)
       add_subdirectory("${FABM_BASE}" extern/fabm)
@@ -91,7 +91,7 @@ endif(GOTM_USE_FABM)
 
 if(GOTM_USE_STIM)
    mark_as_advanced(FORCE STIM_BASE STIM_EMBED_VERSION)
-   find_path(STIM_BASE src/stim_version.F90.in HINTS ${CMAKE_CURRENT_LIST_DIR}/extern/stim DOC "Path to STIM source directory.")
+   find_path(STIM_BASE src/stim_version.F90.in HINTS ${CMAKE_CURRENT_LIST_DIR}/extern/stim DOC "Path to STIM source directory." NO_CMAKE_FIND_ROOT_PATH)
    set(STIM_EMBED_VERSION ${GOTM_EMBED_VERSION} CACHE BOOL "Embed STIM version information" FORCE)
    add_subdirectory("${STIM_BASE}" extern/stim)
    mark_as_advanced(CLEAR STIM_BASE)
