--- a/.github/workflows/gotm.yml
+++ b/.github/workflows/gotm.yml
@@ -7,8 +7,8 @@ jobs:
             version: [9, 10]
             os: [ubuntu-latest]
             include:
-               - version: 6
-                 os: ubuntu-18.04
+               #- version: 6
+               #  os: ubuntu-18.04
                - version: 7
                  os: ubuntu-20.04
                - version: 8
