--- a/.github/workflows/gotm.yml
+++ b/.github/workflows/gotm.yml
@@ -4,7 +4,7 @@ jobs:
   gfortran:
     strategy:
         matrix:
-          version: [9, 10, 11, 12, 13]
+          version: [9, 10, 11, 12]
           os: ["ubuntu-latest"]
           include:
               - version: 7
@@ -12,6 +12,10 @@ jobs:
               - version: 8
                 os: ubuntu-20.04
                 cmake_args: -DFABM_USE_CONTIGUOUS=OFF
+              - version: 13
+                os: ubuntu-24.04
+              - version: 14
+                os: ubuntu-24.04
         fail-fast: false
     runs-on: ${{ matrix.os }}
     steps:
