--- a/src/turbulence/CMakeLists.txt
+++ b/src/turbulence/CMakeLists.txt
@@ -5,6 +5,7 @@ add_library(turbulence
    cmue_b.F90
    cmue_c.F90
    cmue_d.F90
+   cmue_d_h15.F90
    cmue_ma.F90
    cmue_sg.F90
    compute_cpsi3.F90
