--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -39,7 +39,7 @@ if(GOTM_USE_STIM)
   add_definitions(-D_ICE_)
 endif()
 if(GOTM_USE_SEAGRASS)
-   add_definitions(-DSEAGRASS)
+  add_definitions(-D_SEAGRASS_)
 endif()
 if(GOTM_EXTRA_OUTPUT)
   add_definitions(-DEXTRA_OUTPUT)
