--- a/src/extras/seagrass/CMakeLists.txt
+++ b/src/extras/seagrass/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_library(seagrass
    seagrass.F90
 )
-target_link_libraries(seagrass PUBLIC field_manager PRIVATE meanflow)
 set_property(TARGET seagrass PROPERTY FOLDER gotm)
+target_link_libraries(seagrass PUBLIC field_manager PRIVATE meanflow gotm::config)
